--- a/Makefile.in
+++ b/Makefile.in
@@ -21,12 +21,12 @@ DEAD_Q=${SPOOLDIR}dead
 SIMTA_ETC=${SPOOLDIR}etc
 SIMTA_COMMAND=${SPOOLDIR}command
 
-SRC=    @LDAP_SRC@ @SSL_SRC@ \
+SRC=    @LDAP_SRC@ @SSL_SRC@ @LMDB_SRC@ \
 	daemon.c receive.c argcargv.c envelope.c base64.c \
 	simsend.c simconnect.c rcptlist.c address.c \
 	simalias.c bounce.c wildcard.c
-COMMONOBJ=	@LDAP_OBJ@ @SSL_OBJ@ \
-		address.o argcargv.o base64.o bdb.o bounce.o dns.o envelope.o \
+COMMONOBJ=	@LDAP_OBJ@ @SSL_OBJ@ @LMDB_OBJ@ \
+		address.o argcargv.o base64.o bounce.o dns.o envelope.o \
 		expand.o header.o line_file.o ll.o ml.o q_cleanup.o \
 		queue.o red.o simta.o smtp.o wildcard.o
 SIMTAOBJ=	${COMMONOBJ} daemon.o receive.o
@@ -47,9 +47,9 @@ SIMCKOBJ=	simck.o base64.o md.o
 CC=		@CC@
 OPTOPTS=	@OPTOPTS@
 INSTALL=	@INSTALL@
-INCPATH=	-I. @CPPFLAGS@ @DENSER_CFLAGS@ @JEMALLOC_CFLAGS@ @SNET_CFLAGS@ @YASL_CFLAGS@ @BDB_CPPFLAGS@ @LIBSSL_CFLAGS@ @LDAP_CPPFLAGS@ @LIBWRAP_CPPFLAGS@ @LIBSASL_CFLAGS@${SRCPFX_INCPATH}
+INCPATH=	-I. @CPPFLAGS@ @DENSER_CFLAGS@ @JEMALLOC_CFLAGS@ @SNET_CFLAGS@ @YASL_CFLAGS@ @LIBSSL_CFLAGS@ @LDAP_CPPFLAGS@ @LIBWRAP_CPPFLAGS@ @LIBSASL_CFLAGS@${SRCPFX_INCPATH}
 DEFS=		-g -DLIBEXECDIR=\"$(LIBEXECDIR)\" @DEFS@
-LIBPATH=	@LDFLAGS@ @BDB_LDFLAGS@ @LDAP_LDFLAGS@ @LIBWRAP_LDFLAGS@
+LIBPATH=	@LDFLAGS@ @LDAP_LDFLAGS@ @LIBWRAP_LDFLAGS@
 LIBS=		@DENSER_LIBS@ @JEMALLOC_LIBS@ @SNET_LIBS@ @LIBSSL_LIBS@ @LIBSASL_LIBS@ @YASL_LIBS@ @LIBS@ @EXTRALIBS@
 TAGSFILE=	tags
 CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH}
@@ -131,10 +131,9 @@ q_runner : ${QRUNNEROBJ} Makefile
 q_cleanup : ${QCLEANUPOBJ} Makefile
 	${CC} ${CFLAGS} ${LDFLAGS} -o q_cleanup ${QCLEANUPOBJ} ${LIBPATH} ${LIBS}
 
-address.o: bdb.h config.h dns.h envelope.h expand.h header.h line_file.h ll.h queue.h red.h simta.h simta_ldap.h
+address.o: config.h dns.h envelope.h expand.h header.h line_file.h ll.h queue.h red.h simta.h simta_ldap.h
 argcargv.o: argcargv.h config.h
 base64.o: base64.h config.h
-bdb.o: bdb.h config.h
 bounce.o: config.h envelope.h expand.h line_file.h ll.h ml.h queue.h simta.h smtp.h
 daemon.o: config.h envelope.h ll.h queue.h simta.h tls.h
 dn.o: dn.h
@@ -150,9 +149,9 @@ ml.o: config.h envelope.h line_file.h ml.h queue.h simta.h
 q_cleanup.o: config.h envelope.h ll.h queue.h simta.h
 q_runner.o: config.h envelope.h expand.h line_file.h ll.h ml.h queue.h simta.h smtp.h
 queue.o: config.h dns.h envelope.h expand.h line_file.h ll.h ml.h queue.h red.h simta.h smtp.h wildcard.h
-receive.o: argcargv.h base64.h bdb.h config.h dns.h envelope.h expand.h header.h line_file.h ll.h md.h queue.h red.h simta.h simta_ldap.h
+receive.o: argcargv.h base64.h config.h dns.h envelope.h expand.h header.h line_file.h ll.h md.h queue.h red.h simta.h simta_ldap.h
 red.o: argcargv.h config.h dns.h envelope.h expand.h ll.h ml.h queue.h red.h simta.h simta_ldap.h
-simalias.o: argcargv.h bdb.h config.h dns.h envelope.h expand.h ll.h ml.h queue.h red.h simta.h simta_ldap.h
+simalias.o: argcargv.h config.h dns.h envelope.h expand.h ll.h ml.h queue.h red.h simta.h simta_ldap.h
 simck.o: base64.h config.h md.h
 simlog.o: config.h simta.h
 simrbl.o: config.h dns.h envelope.h ll.h simta.h
