Add config variable to control body checksums

--- a/simta.conf
+++ b/simta.conf
@@ -265,6 +265,16 @@
 #
 #CONTENT_FILTER			PATH
 
+# Algorithm to use for message checksum calculation. Checksums are only
+# calculated if the content filter is enabled.
+# Run `openssl list-message-digest-algorithms` to find out which algorithms
+# your OpenSSL installation supports.
+#CHECKSUM_ALGORITHM    sha1
+
+# Enable calculating a second checksum covering just the message body.
+# Default is OFF.
+#CHECKSUM_BODY     [ ON | OFF ]
+
 # Optional URL for the SMTP data banner for failed or tempfailed DATA requests
 #
 #SMTP_DATA_URL			URL
