Clean up config parsing somewhat
There may have been some grand vision behind the ordering of the
parsing stanzas, but it has been lost to the mists of time and changes
that threw things in at random places. Reorder them alphabetically.

Replace *_OFF and *_ON directives with directives that accept ON or OFF.

Rename some directives (particularly some that are TLS related) for
clarity and consistency.

--- a/simta.conf
+++ b/simta.conf
@@ -15,9 +15,9 @@
 #
 #SMTP_MODE			NORMAL
 
-# disables sender checking
-#
-# DISABLE_SENDER_CHECKING
+# sender checking
+# default: ON
+#SENDER_CHECKING [ ON | OFF ]
 
 # TARPIT stage wait times.  The default time is waited before ecah banner
 # message while simta is in TARPIT mode.  If a stage wait
@@ -29,16 +29,12 @@
 #SMTP_TARPIT_DATA		0
 #SMTP_TARPIT_DATA_EOF		0
 
-# Enable SMTPS service on port 465 if it is not defined in /etc/services.
-# 0 - None, do not enable service
-# 1 - Server
-# 2 - Client & Server
-#
-# AUTHLEVEL			0
+# Enable SMTPS service
+# TLS_LEGACY_PORT [ ON | OFF ]
 
-# Enable submission service on port 587 if not defined in /etc/services.
+# Enable submission service
 #
-#SUBMISSION_PORT
+#SUBMISSION_PORT [ ON | OFF ]
 
 # Start SMTP service on a given port.  If this is set to 0, normal SMTP
 # service will not be enabled, tho SMTPS and SMTP AUTH may still be active.
@@ -115,7 +111,7 @@
 #
 # This is the total number of seconds that simta will allow for any inbound
 # SSL Accept call.  0 uses the blocking system call.
-#RECEIVE_SSL_ACCEPT_TIMEOUT	  	0
+#RECEIVE_TLS_ACCEPT_TIMEOUT	  	0
 #
 # This is the total number of seconds that simta will wait for any outgoing
 # SMTP command to be acknowledged.
@@ -131,7 +127,7 @@
 #
 # This is the total number of seconds that simta will allow for any outgoing
 # SSL Connect call.  0 uses the blocking system call.
-#DELIVER_SSL_CONNECT_TIMEOUT	  	0
+#DELIVER_TLS_CONNECT_TIMEOUT	  	0
 
 # The maximum number of messages that we will attempt in a single outbound
 # connection. Default is unlimited (0).
@@ -333,20 +329,20 @@
 #USER_RBL_LOG_ONLY		DOMAIN
 
 # Allow -f option with simsendmail.
-#
-#SIMSEND_STRICT_FROM_OFF
+# Default: OFF
+#SIMSEND_STRICT_FROM [ ON | OFF ]
 
-# TLS_OUTBOUND <OPTIONAL|REQUIRED|DISABLED>
+# DELIVER_TLS <OPTIONAL|REQUIRED|DISABLED>
 #
-#TLS_OUTBOUND OPTIONAL
+#DELIVER_TLS OPTIONAL
 
-# TLS_CERT_OUTBOUND <OPTIONAL|REQUIRED>
+# DELIVER_TLS_CERT <OPTIONAL|REQUIRED>
 #
-#TLS_CERT_OUTBOUND OPTIONAL
+#DELIVER_TLS_CERT OPTIONAL
 
-# TLS_CIPHERS_OUTBOUND <cipher string>
+# DELIVER_TLS_CIPHERS <cipher string>
 #
-#TLS_CIPHERS_OUTBOUND   aRSA+AES128+kEECDH:aRSA+AES128+kEDH:aRSA+AES128+kRSA:RC4-SHA:@STRENGTH
+#DELIVER_TLS_CIPHERS   aRSA+AES128+kEECDH:aRSA+AES128+kEDH:aRSA+AES128+kRSA:RC4-SHA:@STRENGTH
 
 # Default alias DB file.  If no filename is given, default DB is disabled.
 #
@@ -354,24 +350,24 @@
 
 # File for ca.
 #
-#CA_FILE			cert/ca.pem
+#TLS_CA_FILE			cert/ca.pem
 
 # File for cert.
 #
-#CERT_FILE			cert/cert.pem
+#TLS_CERT			cert/cert.pem
 
 # File for private key.
 #
-#PRIVATE_KEY_FILE		cert/cert.pem
+#TLS_CERT_KEY		        cert/cert.pem
 
-# Use the randfile with TLS.
+# Use the randfile with TLS. Default is OFF.
 #
-#USE_RANDFILE
+#TLS_RANDFILE [ ON | OFF ]
 
-# DNS_CONFIG			< ON | OFF >
 # Automatically accept mail if primary hostnames are MXed to us.
+# Default is OFF.
 #
-#DNS_CONFIG			OFF
+#DNS_AUTO_CONFIG [ ON | OFF ]
 
 # Size of backlog for incoming smtp connections.
 #
@@ -497,12 +493,12 @@
 #
 # Set outbound TLS policy for a domain.
 #
-# @hostname	D	TLS_OUTBOUND <OPTIONAL|REQUIRED|DISABLED>
+# @hostname	D	TLS <OPTIONAL|REQUIRED|DISABLED>
 #
 # Set outbound TLS_CERT policy for a domain.
 #
-# @hostname	D	TLS_CERT_OUTBOUND <OPTIONAL|REQUIRED>
+# @hostname	D	TLS_CERT <OPTIONAL|REQUIRED>
 #
 # Set outbound TLS cipher suite for a domain.
 #
-# @hostname     D       TLS_CIPHERS_OUTBOUND <cipher string>
+# @hostname     D       TLS_CIPHERS <cipher string>
