Improve TLS defaults, add TLS_CIPHERS config
Default to a sane set of cipher suites and unconditionally enable server
order preference. Allow cipher suite overrides in the config file.

--- a/simta.conf
+++ b/simta.conf
@@ -342,11 +342,14 @@
 
 # DELIVER_TLS_CIPHERS <cipher string>
 #
-#DELIVER_TLS_CIPHERS   aRSA+AES128+kEECDH:aRSA+AES128+kEDH:aRSA+AES128+kRSA:RC4-SHA:@STRENGTH
+#DELIVER_TLS_CIPHERS   EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:ECDH+3DES:RSA+3DES:!MD5
 
 # Default alias DB file.  If no filename is given, default DB is disabled.
 #
 #ALIAS_DB			/etc/alias.db
+
+# Enable STARTTLS support
+#TLS [ ON | OFF ]
 
 # File for ca.
 #
@@ -359,6 +362,10 @@
 # File for private key.
 #
 #TLS_CERT_KEY		        cert/cert.pem
+
+# Set a custom cipher string
+#TLS_CIPHERS EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:DH+AES128:DH+AES256:DH+3DES:!MD5
+#TLS_CIPHERS EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:ECDH+3DES:RSA+3DES:DH+AES128:DH+AES256:DH+3DES:EECDH+RC4:RSA+RC4
 
 # Use the randfile with TLS. Default is OFF.
 #
