Add support for SRS using libsrs2
Sender Rewriting Scheme is a somewhat standard method for forwarders
to rewrite the RFC5321.MailFrom address to keep forwarding working in
the bright shiny world of SPF.

Briefly, the most common form transforms foreign addresses to a
reversible form that's valid for a limited time and signed with a
cryptographic hash. E.g. example.org might rewrite foo@example.com to
SRS0=HASH=TIMESTAMP=example.com=foo@example.org

Now all mail forwarded through your server comes from a domain you own
and can publish an SPF record for, when you receive a bounce to an
SRS address you know where to forward it, and the cryptographic hash
ensures this functionality can't be abused as an open forwarder.

--- a/packaging/rpm/simta.spec.in
+++ b/packaging/rpm/simta.spec.in
@@ -3,6 +3,7 @@
 %define with_sasl2	yes
 %define with_libidn     yes
 %define with_ldap	yes
+%define with_srs        yes
 
 %define smshell /sbin/nologin
 %define spooldir %{_localstatedir}/spool
@@ -39,6 +40,9 @@ BuildRequires: pkgconfig(libidn)
 %if "%{with_ldap}" == "yes"
 BuildRequires: openldap-devel
 %endif
+%if "%{with_srs}" == "yes"
+BuildRequires: libsrs2-devel
+%endif
 Requires(pre): shadow-utils
 Requires(preun): %{_sbindir}/alternatives chkconfig
 Requires(post): %{_sbindir}/alternatives chkconfig coreutils
@@ -69,6 +73,9 @@ export JEMALLOC_CFLAGS=-I/usr/include
 %endif
 %if "%{with_ldap}" != "yes"
 	--with-ldap=no \
+%endif
+%if "%{with_srs}" != "yes"
+        --with-srs2=no \
 %endif
         --with-group=mail \
         --with-aliasdb=%{_sysconfdir}/aliases.db \
