Add support for DKIM verification using opendkim

--- a/Makefile.in
+++ b/Makefile.in
@@ -59,6 +59,7 @@ INCPATH +=	@LIBIDN_CFLAGS@
 INCPATH +=	@LIBSASL_CFLAGS@
 INCPATH +=	@LIBSSL_CFLAGS@
 INCPATH +=	@LIBWRAP_CPPFLAGS@
+INCPATH +=	@OPENDKIM_CFLAGS@
 INCPATH +=	${SRCPFX_INCPATH}
 DEFS=		-g -DLIBEXECDIR=\"$(LIBEXECDIR)\" @DEFS@
 LIBPATH	=	@LDFLAGS@
@@ -71,6 +72,7 @@ LIBS +=		@YASL_LIBS@
 LIBS +=		@LIBIDN_LIBS@
 LIBS +=		@LIBSASL_LIBS@
 LIBS +=		@LIBSSL_LIBS@
+LIBS +=		@OPENDKIM_LIBS@
 LIBS +=		@EXTRALIBS@
 TAGSFILE=	tags
 CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH}
