Replace SIMTA_MAX_BOUNCE_LINES with SIMTA_MAX_BOUNCE_SIZE
Also make bounce_snet call bounce_dfile_out instead of having two
slightly differing implementations of the same thing.

--- a/simta.conf
+++ b/simta.conf
@@ -143,10 +143,10 @@
 #
 #DEFAULT_LOCAL_MAILER [ ARGS ]
 
-# Number of lines of the original message that get sent back in the event of
-# a bounce.  0 means unlimited.
+# Messages larger than this will only include the headers in the bounce instead
+# of the entire message.
 #
-#BOUNCE_LINES			100
+#BOUNCE_SIZE			524288
 
 # How many seconds we try to deliver a message before we bounce it.  Default
 # is a standard three days.  0 means never bounce.
