--- a/Makefile.in
+++ b/Makefile.in
@@ -54,6 +54,7 @@ INCPATH +=	@JEMALLOC_CFLAGS@
 INCPATH +=	@SNET_CFLAGS@
 INCPATH +=	@YASL_CFLAGS@
 INCPATH +=	@LDAP_CPPFLAGS@
+INCPATH +=	@LIBIDN_CFLAGS@
 INCPATH +=	@LIBSASL_CFLAGS@
 INCPATH +=	@LIBSSL_CFLAGS@
 INCPATH +=	@LIBWRAP_CPPFLAGS@
@@ -66,6 +67,7 @@ LIBS +=		@DENSER_LIBS@
 LIBS +=		@JEMALLOC_LIBS@
 LIBS +=		@SNET_LIBS@
 LIBS +=		@YASL_LIBS@
+LIBS +=		@LIBIDN_LIBS@
 LIBS +=		@LIBSASL_LIBS@
 LIBS +=		@LIBSSL_LIBS@
 LIBS +=		@EXTRALIBS@
