--- a/Makefile.in
+++ b/Makefile.in
@@ -29,10 +29,11 @@ COMMONOBJ=	@LDAP_OBJ@ @SSL_OBJ@ @LMDB_OBJ@ @YASL_OBJ@ @SRS_OBJ@ \
 		address.o argcargv.o bounce.o dns.o envelope.o \
 		expand.o header.o line_file.o ll.o ml.o q_cleanup.o \
 		queue.o red.o simta.o smtp.o wildcard.o
-SIMTAOBJ=	${COMMONOBJ} daemon.o receive.o spf.o
+SIMTAOBJ=	${COMMONOBJ} daemon.o dmarc.o receive.o spf.o
 SIMCONOBJ=	${COMMONOBJ} simconnect.o
 SIMCOBJ=	${COMMONOBJ} simc.o
 SIMDAOBJ=	simda.o
+SIMDMARCOBJ=	${COMMONOBJ} simdmarc.o dmarc.o
 SIMSENDOBJ=	${COMMONOBJ} simsend.o
 SIMSPFOBJ=	${COMMONOBJ} simspf.o spf.o
 SIMLOGOBJ=	simlog.o
@@ -84,7 +85,7 @@ MAN1TARGETS=	simsendmail.1
 MAN8TARGETS=	simta.8
 BINTARGETS=	simrbl simreverse simalias simexpander simconnect
 TARGETS=	simta simconnect simsendmail q_runner simexpander \
-                sla simc simda simspf \
+                sla simc simda simspf simdmarc \
 		${BINTARGETS}
 
 all : ${TARGETS}
@@ -129,6 +130,10 @@ simspf : ${SIMSPFOBJ} Makefile
 	${CC} ${CFLAGS} ${LDFLAGS} -o simspf ${SIMSPFOBJ} \
 		${SIMTALIBPATH} ${SIMTALIBS}
 
+simdmarc : ${SIMDMARCOBJ} Makefile
+	 ${CC} ${CFLAGS} ${LDFLAGS} -o simdmarc ${SIMDMARCOBJ} \
+	 	${SIMTALIBPATH} ${SIMTALIBS}
+
 simsendmail : ${SIMSENDOBJ} Makefile
 	${CC} ${CFLAGS} ${LDFLAGS} -o simsendmail ${SIMSENDOBJ} \
 		${SIMTALIBPATH} ${SIMTALIBS}
@@ -162,6 +167,7 @@ address.o: config.h dns.h envelope.h expand.h header.h line_file.h ll.h queue.h 
 argcargv.o: argcargv.h config.h
 bounce.o: config.h envelope.h expand.h line_file.h ll.h ml.h queue.h simta.h smtp.h
 daemon.o: config.h envelope.h ll.h queue.h simta.h tls.h
+dmarc.o: config.h dmarc.h dns.h
 dn.o: dn.h
 dns.o: config.h dns.h envelope.h expand.h ll.h queue.h red.h simta.h
 envelope.o: config.h envelope.h header.h line_file.h ll.h queue.h simta.h
@@ -179,6 +185,7 @@ receive.o: argcargv.h config.h dns.h envelope.h expand.h header.h line_file.h ll
 red.o: argcargv.h config.h dns.h envelope.h expand.h ll.h ml.h queue.h red.h simta.h simta_ldap.h
 simalias.o: argcargv.h config.h dns.h envelope.h expand.h ll.h ml.h queue.h red.h simta.h simta_ldap.h
 simck.o: config.h md.h
+simdmarc.o: config.h dmarc.h simta.h
 simlog.o: config.h simta.h
 simrbl.o: config.h dns.h envelope.h ll.h simta.h
 simreverse.o: config.h dns.h envelope.h ll.h simta.h
