Link against YASL
yasl is a simple dynamic string library that provides useful
abstractions for dealing with buffer resizing and some common
string operations.

This is mainly being used in new topic branches for now, but there are
several areas of old code where it would be incredibly useful.

--- a/packaging/rpm/simta.spec.in
+++ b/packaging/rpm/simta.spec.in
@@ -28,6 +28,7 @@ BuildRequires: procmail
 BuildRequires: setup
 BuildRequires: pkgconfig(denser)
 BuildRequires: pkgconfig(libsnet)
+BuildRequires: pkgconfig(libyasl)
 %if "%{with_tls}" == "yes"
 BuildRequires: pkgconfig(openssl)
 Requires: openssl
@@ -56,6 +57,7 @@ Requires: libsnet
 Requires: procmail
 Requires: setup
 Requires: tcp_wrappers
+Requires: yasl
 
 %description
 simta is used for mail routing and delivery.
