use jemalloc, configure it to die on failure
    jemalloc is a general purpose malloc(3) implementation that
    emphasizes fragmentation avoidance and scalable concurrency
    support. [...] Ongoing development efforts trend toward making
    jemalloc among the best allocators for a broad range of demanding
    applications, and eliminating/mitigating weaknesses that have
    practical repercussions for real world applications.

Trying to catch and deal with memory allocation failures requires a lot
of boilerplate code and rarely allows us to recover to a useful state;
jemalloc supports a mode where malloc() etc. either return successfully
or abort the program.

--- a/Makefile.in
+++ b/Makefile.in
@@ -47,10 +47,10 @@ SIMCKOBJ=	simck.o base64.o md.o
 CC=		@CC@
 OPTOPTS=	@OPTOPTS@
 INSTALL=	@INSTALL@
-INCPATH=	-I. @CPPFLAGS@ @DENSER_CFLAGS@ @SNET_CFLAGS@ @YASL_CFLAGS@ @BDB_CPPFLAGS@ @LIBSSL_CFLAGS@ @LDAP_CPPFLAGS@ @LIBWRAP_CPPFLAGS@ @LIBSASL_CFLAGS@${SRCPFX_INCPATH}
+INCPATH=	-I. @CPPFLAGS@ @DENSER_CFLAGS@ @JEMALLOC_CFLAGS@ @SNET_CFLAGS@ @YASL_CFLAGS@ @BDB_CPPFLAGS@ @LIBSSL_CFLAGS@ @LDAP_CPPFLAGS@ @LIBWRAP_CPPFLAGS@ @LIBSASL_CFLAGS@${SRCPFX_INCPATH}
 DEFS=		-g -DLIBEXECDIR=\"$(LIBEXECDIR)\" @DEFS@
 LIBPATH=	@LDFLAGS@ @BDB_LDFLAGS@ @LDAP_LDFLAGS@ @LIBWRAP_LDFLAGS@
-LIBS=		@DENSER_LIBS@ @SNET_LIBS@ @LIBSSL_LIBS@ @LIBSASL_LIBS@ @YASL_LIBS@ @LIBS@ @EXTRALIBS@
+LIBS=		@DENSER_LIBS@ @JEMALLOC_LIBS@ @SNET_LIBS@ @LIBSSL_LIBS@ @LIBSASL_LIBS@ @YASL_LIBS@ @LIBS@ @EXTRALIBS@
 TAGSFILE=	tags
 CFLAGS=		${DEFS} ${OPTOPTS} ${INCPATH}
 
