Add config variable to skip content filter for trusted hosts

--- a/simta.conf
+++ b/simta.conf
@@ -261,6 +261,9 @@
 #
 #CONTENT_FILTER			PATH
 
+# Run messages from trusted hosts through the content filter. Default is ON.
+#FILTER_TRUSTED     [ ON | OFF ]
+
 # Algorithm to use for message checksum calculation. Checksums are only
 # calculated if the content filter is enabled.
 # Run `openssl list-message-digest-algorithms` to find out which algorithms
