--- a/Makefile.in
+++ b/Makefile.in
@@ -24,8 +24,8 @@ SIMTA_COMMAND=${SPOOLDIR}command
 SRC=    @LDAP_SRC@ @SSL_SRC@ @LMDB_SRC@ \
 	daemon.c receive.c argcargv.c envelope.c \
 	simsend.c simconnect.c rcptlist.c address.c \
-	simalias.c bounce.c wildcard.c
-COMMONOBJ=	@LDAP_OBJ@ @SSL_OBJ@ @LMDB_OBJ@ \
+	simalias.c bounce.c wildcard.c yasl.c
+COMMONOBJ=	@LDAP_OBJ@ @SSL_OBJ@ @LMDB_OBJ@ @YASL_OBJ@ \
 		address.o argcargv.o bounce.o dns.o envelope.o \
 		expand.o header.o line_file.o ll.o ml.o q_cleanup.o \
 		queue.o red.o simta.o smtp.o wildcard.o
